# Kairos

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/agents/: decision_agent.py  execution_agent.py  portfolio_agent.py  prediction_agent.py  sentiment_agent.py
backend/app/api/: routes_dashboard.py  routes_decisions.py  routes_features.py  routes_market_data.py  routes_predictions.py  routes_websocket.py
backend/app/core/: alerting.py  config.py  redis_client.py  universe.py
backend/app/data/: bar_service.py  market_data_client.py  stream_client.py
backend/app/db/: models.py  session.py
backend/app/execution/: paper_broker.py  trading_bot.py
backend/app/features/: feature_builder.py
backend/app/models/: prediction_dataset.py  prediction_model.py
backend/app/risk/: risk_engine.py  risk_policy.py
backend/app/rl/: rl_agent.py  trading_env.py
backend/app/schemas/: trading.py
backend/scripts/: add_prediction_columns.py  build_features.py  create_tables.py  load_historical_bars.py  run_autonomous_bot.py  run_decision_agent.py  run_prediction_agent.py  seed_symbols.py  test_prediction_model.py  train_prediction_model.py  train_rl_agent.py  validate_trading_env.py
backend/tests/: test_feature_builder.py  test_prediction_model_loader.py
backend/tradeops_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html
frontend/src/: App.jsx  index.css
infra/: docker-compose.yml
